--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.3",
     "js-cookie": "^3.0.5",
     "lib-flexible": "^0.3.2",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "px2rem-loader": "^0.1.9",
